--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
     color: #880e4f; /* Color vino tinto */
     margin: 0;
     padding: 0;
-    overflow-y: scroll;
+    overflow: hidden;
 }
 
 header {
